--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
 <body>
 </body>
-<haeder class="header">
+<header class="header">
 	<h1 class="topic">
 		HR statistics: job search,  interviews, hiring and recruiting
 	</h1>
 	<br>
-</haeder>
+</header>
 <main class="main">
 	<img src="img/keyboard.jpg" alt="the-keyboard-photo" class="image">
 	<br><br>
